# Mesh_Radio_Flasher

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  partitions_c3.csv  platformio.ini  platformio.ini.c3  sdkconfig.defaults  sdkconfig.xiao_esp32c3  sdkconfig.xiao_esp32s3
components/ble_proxy/: CMakeLists.txt
components/ble_proxy/include/: ble_proxy.h
components/ble_proxy/src/: ble_connection.c  ble_proxy.c  tcp_proxy.c
components/bt_proxy/: CMakeLists.txt
components/bt_proxy/include/: bt_proxy.h
components/bt_proxy/src/: bt_proxy.c
components/power/: CMakeLists.txt
components/power/include/: power_mgmt.h
components/power/src/: power_mgmt.c
components/swd/include/: nrf52_hal.h  swd_core.h  swd_flash.h  swd_mem.h
components/swd/src/: swd_core.c  swd_flash.c  swd_mem.c
components/web/: CMakeLists.txt
components/web/html/: app.js  index.html  style.css
components/web/include/: web_ble.h  web_server.h  web_upload.h
components/web/src/: web_ble.c  web_ble_connect.c  web_bt_handlers.c  web_handlers.c  web_upload.c
main/: CMakeLists.txt  main.c
